--- a/xg-hockey/notebooks/xG_Project.ipynb
+++ b/xg-hockey/notebooks/xG_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33e9a0fa",
+   "id": "f4047b2d",
    "metadata": {},
    "source": [
     "# Building an Expected Goals (xG) Model for NHL Shots"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c71ce913",
+   "id": "115dd44e",
    "metadata": {},
    "source": [
     "Expected Goals (xG) is a statistic used in hockey analytics that measures the quality of a shot by estimating the probability it results in a goal. \n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504febfb",
+   "id": "07499b73",
    "metadata": {},
    "source": [
     "The main goals of this project are:\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "394bb70a",
+   "id": "c9a66c12",
    "metadata": {},
    "source": [
     "## Loading and cleaning data"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f38835",
+   "id": "19c211f1",
    "metadata": {},
    "source": [
     "Importing the necessary packages for model building/evaluation"
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3ac151bf",
+   "execution_count": 202,
+   "id": "619498f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,19 @@
     "from xgboost import XGBClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import roc_auc_score, brier_score_loss, confusion_matrix, classification_report\n",
+    "from sklearn.calibration import calibration_curve\n",
+    "\n",
     "import xgboost as xgb\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import matplotlib as plt\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5c7e523b",
+   "id": "255abe60",
    "metadata": {},
    "source": [
     "Now I import the csv file that contains shot data from moneypuck.com. This is a very large file (contains over 1 million shots between 2015-2023), so it should take a while to load"
@@ -75,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a6046f37",
+   "id": "c80f4819",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fe58f4c4",
+   "id": "ffd4d1af",
    "metadata": {
     "scrolled": false
    },
@@ -303,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d21ce6b6",
+   "id": "250e4682",
    "metadata": {},
    "source": [
     "Each row in the dataset represents a single shot attempt.  \n",
@@ -319,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "062eeb47",
+   "id": "4dcbd899",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce34f3b",
+   "id": "4e7f1f9a",
    "metadata": {},
    "source": [
     "In order to clean the dataset, I drop rows where the core shot info (shot distance and shot angle) is missing. I also fill all the empty rows for categorical variables (shot type, event category and the position of the player) as `Unknown`"
@@ -348,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ea3e5396",
+   "id": "bdf0720d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8e4efe",
+   "id": "c4eaaf97",
    "metadata": {},
    "source": [
     "## Feature Selection"
@@ -369,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe541549",
+   "id": "04c6443b",
    "metadata": {},
    "source": [
     "Before building the xG model, it is important to explore the dataset to identify features that are most predictive of whether a shot will result in a goal.  \n",
@@ -394,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "63ee769b",
+   "id": "99acfe95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf745a8b",
+   "id": "0074a278",
    "metadata": {},
    "source": [
     "Since some of the features are categorical variables (like `shotType`, `lastEventCategory`, `playerPositionThatDidEvent`, and `period`), they cannot be directly used in a machine learning model because the model works with numerical inputs. To handle this, I apply one-hot encoding, which converts each category into a new binary column (`0` or `1`)."
@@ -420,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cc78aab3",
+   "id": "703192fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1cbe1f4",
+   "id": "b241e56e",
    "metadata": {},
    "source": [
     "## Model Building"
@@ -437,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60bcbf45",
+   "id": "b86555b1",
    "metadata": {},
    "source": [
     "For the other numerical columns, I have to make sure no feature dominates the model. To deal with this, I apply `StandardScaler`, which standardizes them to have mean `0` and standard deviation `1`."
@@ -446,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "abc8e1c0",
+   "id": "96b116c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b76decd8",
+   "id": "9c5e5693",
    "metadata": {},
    "source": [
     "The dataset is now split into training (80%) and testing (20%) sets using `train_test_split`."
@@ -466,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "a522bdb9",
+   "id": "e4dc8b18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90c38bd1",
+   "id": "11d8bcc8",
    "metadata": {},
    "source": [
     "The first model I create is a simple logistic regression, which will serve as the baseline. It is interpretable and well-suited for binary classification (goal vs. no goal)\n",
@@ -488,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4cae5653",
+   "id": "cc870bdf",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e469feb6",
+   "id": "531265bb",
    "metadata": {},
    "source": [
     "Predictions:\n",
@@ -524,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "401a6564",
+   "id": "bb07dd5a",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa976433",
+   "id": "27da45b6",
    "metadata": {},
    "source": [
     "## Evaluating the Model"
@@ -574,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6772403",
+   "id": "a62dfcd7",
    "metadata": {},
    "source": [
     "Evaluation Metrics\n",
@@ -588,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f55bdd",
+   "id": "6f7e0b2b",
    "metadata": {},
    "source": [
     "After fitting the Logistic Regression model, I inspect the learned coefficients for each feature.  \n",
@@ -613,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1c6ef7a3",
+   "id": "9ba759fe",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aa35974",
+   "id": "ec50e598",
    "metadata": {},
    "source": [
     "### Building an XGBoost Model\n",
@@ -682,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8ef41c38",
+   "id": "a940f652",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f6662c8",
+   "id": "5e1a8ac7",
    "metadata": {},
    "source": [
     "Just like the logistic regression, I am going to evaluate the model and see how it performed."
@@ -742,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "458b137f",
+   "id": "1e2f8003",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3519752",
+   "id": "563b739a",
    "metadata": {},
    "source": [
     "### Comparing logistic regression and XGBoost"
@@ -792,7 +797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdb983a1",
+   "id": "d4e51614",
    "metadata": {},
    "source": [
     "Logistic Regression: More balanced but weaker separation, with moderate performance in both classes.\n",
@@ -804,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1593efa5",
+   "id": "638bd8ac",
    "metadata": {},
    "source": [
     "The chart that scores the most important features when predicting a goal in the xgboost model.\n",
@@ -815,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "77f73162",
+   "id": "9cbdeece",
    "metadata": {},
    "outputs": [
     {
@@ -832,15 +837,13 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "xgb.plot_importance(xgb_model, max_num_features=15)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d3c0542b",
+   "id": "1ca57d5d",
    "metadata": {},
    "source": [
     "### Calibration Curves\n",
@@ -856,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8b7fe093",
+   "id": "482b6f8e",
    "metadata": {},
    "outputs": [
     {
@@ -873,9 +876,6 @@
     }
    ],
    "source": [
-    "from sklearn.calibration import calibration_curve\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "prob_true, prob_pred = calibration_curve(y_test, y_pred_proba, n_bins=20)\n",
     "plt.plot(prob_pred, prob_true, marker=\"o\")\n",
     "plt.plot([0,1],[0,1], linestyle=\"--\")\n",
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f92f9a10",
+   "id": "df18a1db",
    "metadata": {},
    "source": [
     "In order to improve the line, I chose to do an isotonic regression. This method is very beneficial when there is a large amount of data as it prevents overfitting"
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4bc2d68b",
+   "id": "51eb2977",
    "metadata": {
     "scrolled": true
    },
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ba68671a",
+   "id": "ad0cd4a2",
    "metadata": {},
    "outputs": [
     {
@@ -957,9 +957,6 @@
     }
    ],
    "source": [
-    "from sklearn.calibration import calibration_curve\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "prob_true, prob_pred = calibration_curve(y_test, y_calibrated, n_bins=20)\n",
     "\n",
     "plt.plot(prob_pred, prob_true, marker=\"o\")\n",
@@ -972,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50de6037",
+   "id": "1ae49252",
    "metadata": {},
    "source": [
     "After applying isotonic regression with `CalibratedClassifierCV`, the calibration curve improves significantly:  \n",
@@ -983,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd15c081",
+   "id": "dcb2dfb2",
    "metadata": {},
    "source": [
     "## Player Evaluation"
@@ -991,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a499dc7c",
+   "id": "6afbde56",
    "metadata": {},
    "source": [
     "Now that the model is built, I am going to look at how it predicted the expected goals for each player. \n",
@@ -1002,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "f02ec5e0",
+   "id": "b71ad125",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a00265",
+   "id": "9096574e",
    "metadata": {},
    "source": [
     "Now I am going to group by each player to see how many expected goals the model predicted and the number of actual goals they have scored, along with the difference between the two.\n",
@@ -1054,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "ecc10a81",
+   "id": "0fc8451c",
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aef1f8ac",
+   "id": "c5aed591",
    "metadata": {},
    "source": [
     "As you can see, the players that have the highest difference in goals and expected goals are some of the best players in the world. This is because xG assumes an average skater vs. an average goalie, so players like Auston Matthews and Nikita Kucherov will finish well above their predicted value due to their elite shooting skill. "
@@ -1234,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70771b99",
+   "id": "64ae1ecd",
    "metadata": {},
    "source": [
     "In order to clean this dataset, I am only going to include players that have taken at least 100 shots. I'm also going to look at the shooting percentages by dividing the goals and xG by the number of shots"
@@ -1243,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "218aca47",
+   "id": "48dc40e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "4d8011c4",
+   "id": "7515cff8",
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf44ed9",
+   "id": "4308b75d",
    "metadata": {},
    "source": [
     "A distribution of all points showing expected goals vs. actual goals. \n",
@@ -1538,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "7bd0a14d",
+   "id": "b85b143c",
    "metadata": {},
    "outputs": [
     {
@@ -1555,8 +1552,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "ax = player_xg.plot.scatter(x=\"total_xG\", y=\"actual_goals\", alpha=0.6)\n",
     "lims = [0, max(player_xg[[\"total_xG\",\"actual_goals\"]].max())]\n",
     "ax.plot(lims, lims, linestyle=\"--\")  # y=x line\n",
@@ -1566,7 +1561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecf8d534",
+   "id": "2e54f757",
    "metadata": {},
    "source": [
     "Since the dataset contains data from 2015-2023, I wanted group the data by season and player to see how the model has performed across each season."
@@ -1575,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "06e8d555",
+   "id": "65d551c2",
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f086aae8",
+   "id": "e364eb26",
    "metadata": {},
    "source": [
     "First, I want to look at the top individual seasons the model had. "
@@ -1808,7 +1803,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "f526c100",
+   "id": "466e5460",
    "metadata": {
     "scrolled": false
    },
@@ -2077,7 +2072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "714bc5e1",
+   "id": "9593436f",
    "metadata": {},
    "source": [
     "It had Sam Reinhart's 2023 season as the top-scoring season. Out of 118 total shots, Reinhart generated 12.75 xG while scoring 16 goals. Reinhart scored 42 goals in 2023, which was the 12th highest in the league in that span. He also had the 8th highest shooting percentage in the entire NHL in that span, which is why the difference between his `actual_goals` and `total_xG` is relatively high."
@@ -2086,7 +2081,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "467ce0cb",
+   "id": "f00a8d99",
    "metadata": {
     "scrolled": false
    },
@@ -2375,7 +2370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51a70467",
+   "id": "14c2f987",
    "metadata": {},
    "source": [
     "I want to visualize the players that caused the highest discrepancy between goals and xG. Most of the players on this chart are ones that had elite seasons like McDavid in 2022 and Leon Draisaitl in 2019 and 2022. \n",
@@ -2388,7 +2383,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "5b13affe",
+   "id": "48ab58b5",
    "metadata": {
     "scrolled": false
    },
@@ -3399,7 +3394,6 @@
     }
    ],
    "source": [
-    "import plotly.express as px\n",
     "top_15[\"player_season\"] = top_15[\"shooterName\"] + \" (\" + top_15[\"season\"].astype(str) + \")\"\n",
     "top_15[\"xShot%\"] = top_15.total_xG / top_15.total_shots\n",
     "top_15 = top_15.round(4)\n",
@@ -3409,7 +3403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe7b0432",
+   "id": "8b980c40",
    "metadata": {},
    "source": [
     "### Shot Map Visualization\n",
@@ -3432,7 +3426,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "27953488",
+   "id": "35069de9",
    "metadata": {},
    "outputs": [
     {
@@ -3455,7 +3449,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "c038fe2a",
+   "id": "2fb8d773",
    "metadata": {},
    "outputs": [
     {
@@ -3475,7 +3469,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "350a3291",
+   "id": "18cb2666",
    "metadata": {},
    "outputs": [
     {
@@ -3492,9 +3486,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "df_plot = df_no_empty_net.copy()\n",
     "\n",
     "if \"arenaAdjustedXCordABS\" in df_plot.columns:\n",
@@ -3538,7 +3529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6191474c",
+   "id": "3f98a033",
    "metadata": {},
    "source": [
     "The bright yellow cluster right in front of the net (aka the “slot”) suggests these shots have very high xG, meaning they are much more likely to result in goals. Areas near the blue line or far corners show very low xG values."
@@ -3546,7 +3537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e107104f",
+   "id": "4bf08260",
    "metadata": {},
    "source": [
     "## Conclusion & Results\n",
